--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-Hello World
+---
+layout: default
+title: Saloua Litayem, Girly Geek
+description: Saloua Litayem is a Senior Data engineer
+---
+<!-- <div class="jumbotron"> -->
+<div class="row marketing">
+	<div class="col-sm-4">
+	<img  class="img-circle avatar" alt="Saloua Litayem" src="img/img_saloua150px.jpg">
+	</div>
+	<div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
+	<p class="lead">Hi, I'm <span itemprop="name">Saloua Litayem </span> and I am senior Data Engineer.</p>
+	
+<!-- 	<p>I'm also available for hire as a <span itemprop="title">data scientist, data engineer.</span>. <a href="contact">Drop me a line</a> about the available role if you're interested in having me as an amazing collaborator.</p> -->
+	</div>
+</div>
+<!-- </div> -->
