--- a/about/index.html
+++ b/about/index.html
@@ -4,9 +4,7 @@ title: About Saloua Litayem
 ---
 
 		<div class="about">
-			<h1>About</h1><
-			<!--<p>TODO </p> -->
-
+			<h1>About</h1>
 			<ul class="contacts">
 				<li><a href="https://twitter.com/saloua">@saloua</a></li>
 				<li><a href="https://www.linkedin.com/in/saloualitayem/">https://www.linkedin.com/in/saloualitayem/</a></li>
