Add contact link

--- a/about/index.html
+++ b/about/index.html
@@ -4,9 +4,11 @@ title: About Saloua Litayem
 ---
 
 		<div class="about">
-			<h1>About</h1>
-			<ul class="contacts">
+			<h1>Contact</h1>
+			<p>You can find me at:</p>
+			<ul class="list-unstyled">
 				<li><a href="https://twitter.com/saloua">@saloua</a></li>
 				<li><a href="https://www.linkedin.com/in/saloualitayem/">https://www.linkedin.com/in/saloualitayem/</a></li>
+				<li>Or send me an e-mail to <span>saloua.litayem@gmail.com</span></li>
 				</ul>
 		</div>
