--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Saloua Litayem, Girly Geek
-description: Saloua Litayem is a Senior Data engineer
+description: Saloua Litayem is a Senior Machine Learning Engineer
 ---
 <!-- <div class="jumbotron"> -->
 <div class="row marketing">
@@ -9,8 +9,8 @@ description: Saloua Litayem is a Senior Data engineer
 	<img  class="img-circle avatar" alt="Saloua Litayem" src="img/img_saloua150px.jpg">
 	</div>
 	<div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
-	<p class="lead">Hi, I'm <span itemprop="name">Saloua Litayem </span> and I am senior Data Engineer.</p>
-	
+	<p class="lead">Hi, I'm <span itemprop="name">Saloua Litayem </span> and I'm senior Machine Learning Engineer.</p>
+
 <!-- 	<p>I'm also available for hire as a <span itemprop="title">data scientist, data engineer.</span>. <a href="contact">Drop me a line</a> about the available role if you're interested in having me as an amazing collaborator.</p> -->
 	</div>
 </div>
