--- a/cv/index.html
+++ b/cv/index.html
@@ -5,10 +5,10 @@ title: CV | Saloua Litayem | Girly Geek
 
 	<div class="cv">
 		<a href="/files/cv_saloua_2017.pdf" class="btn btn-default pull-right" title="Download CV as PDF">Download CV
-		</a>			
+		</a>
 		<h1>Saloua Litayem</h1>
 		<address>
-		<strong>Senior Data Engineer</strong><br>
+		<strong>Senior Machine Learning Engineer</strong><br>
 		Munich<br>
 		Germany<br>
 <!-- 		<abbr title="phone">Tel:</abbr> (123) 456-7890<br>
