--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ description: Saloua Litayem is a Senior Machine Learning Engineer
 	<div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
 	<p class="lead">Hi, I'm <span itemprop="name">Saloua Litayem </span> and I'm senior Machine Learning Engineer.</p>
 
-<!-- 	<p>I'm also available for hire as a <span itemprop="title">data scientist, data engineer.</span>. <a href="contact">Drop me a line</a> about the available role if you're interested in having me as an amazing collaborator.</p> -->
+<!-- 	<p>I'm also available for hire as a <span itemprop="title">data scientist, Machine Learning engineer.</span>. <a href="contact">Drop me a line</a> about the available role if you're interested in having me as an amazing collaborator.</p> -->
 	</div>
 </div>
 <!-- </div> -->
