--- a/cv/index.html
+++ b/cv/index.html
@@ -4,7 +4,7 @@ title: CV | Saloua Litayem | Girly Geek
 ---
 
 	<div class="cv">
-		<a href="/files/cv_saloua_2017.pdf" class="btn btn-default pull-right" title="Download CV as PDF">Download CV
+		<a href="/files/cv_saloua_litayem.pdf" class="btn btn-default pull-right" title="Download CV as PDF">Download CV
 		</a>
 		<h1>Saloua Litayem</h1>
 		<address>
