Update pages structure and content.

--- a/404.html
+++ b/404.html
@@ -2,8 +2,14 @@
 layout: default
 title: 404 Error | Sorry, this page does not exist.
 --- 
-
-<div class="error">
-        	<h1>Ooops, that's a 404 Error</h1>
-        	<p class="lead">Hey, sorry, but the page you're trying to access doesn't exist. Try <a href="/" title="Saloua Litayem homepage">going back to the homepage</a>, or use the navigation menu above to find what you're looking for.</p>
-</div>
+<head>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<script src="js/fontawesome.js"></script>
+  </head>
+  <body>
+	<div class="mainbox">
+	  <div class="err">4</div>
+	  <i class="far fa-question-circle fa-spin"></i>
+	  <div class="err2">4</div>
+	  <div class="msg">Maybe this page moved? Got deleted? Is hiding out in quarantine? Never existed in the first place?<p>Let's go <a href="index.html" title="Home">home</a> and try from there.</p></div>
+		</div>
