--- a/about/index.html
+++ b/about/index.html
@@ -7,8 +7,9 @@ title: About Saloua Litayem
 			<h1>Contact</h1>
 			<p>You can find me at:</p>
 			<ul class="list-unstyled">
-				<li><a href="https://twitter.com/saloua">@saloua</a></li>
-				<li><a href="https://www.linkedin.com/in/saloualitayem/">https://www.linkedin.com/in/saloualitayem/</a></li>
-				<li>Or send me an e-mail to <span>saloua.litayem@gmail.com</span></li>
-				</ul>
+				<li><a href="https://www.linkedin.com/in/saloualitayem/">Linkedin</a></li>
+				<li><a href="https://www.github.com/slitayem">Github</a><li>
+				<li><a href="https://twitter.com/saloua">Twitter</a></li>
+				<li><a href="https://scholar.google.com/citations?hl=en&user=mjKcassAAAAJ">Google Scholar</a></li>
+			</ul>
 		</div>
