--- a/cv/index.html
+++ b/cv/index.html
@@ -8,16 +8,15 @@ title: CV | Saloua Litayem | Girly Geek
 		</a>
 		<h1>Saloua Litayem</h1>
 		<address>
-		<strong>Senior Machine Learning Engineer</strong><br>
+		<strong>Senior Machine Learning Engineer/Data Scientist</strong><br>
 		Munich<br>
 		Germany<br>
-<!-- 		<abbr title="phone">Tel:</abbr> (123) 456-7890<br>
- -->		<span class="">saloua.litayem@gmail.com</span>
+<!-- 		<abbr title="phone">Tel:</abbr> (123) 456-7890<br>-->
 		</address>
 
-			<!-- 		<h2>Select Publications</h2>
+		<!-- <h2>Publications</h2>
 
-					<p><strong>Litayem, F.</strong> (204). Title of a Chapter You Wrote for a Book. In I.M Editor (Ed.), <em>The Book I Contributed To</em> (pp. 97-108). City, ST: Publisher Name. Chapter available at: <a href="#">http://permalink</a>. -->
-
-
+		<p><strong>S. Litayem, A. Joly, N. Boujemaa</strong> Hash-based support vector machines approximation for large scale prediction<em></em> BMVC: British Machine Vision Conference, 2012.<a href="https://hal.inria.fr/hal-00733912/document">pdf</a>.
+		<p><strong>S. Litayem, A. Joly, N. Boujemaa</strong> Interactive objects retrieval with efficient boosting<em></em> Proceedings of the 17th ACM international conference, 2009.<a href="https://dl.acm.org/doi/pdf/10.1145/1631272.1631352">pdf</a>.
+		<p><strong>V. Bakić, I. Yahiaoui, S. Mouine, S. Litayem, W. Ouertani</strong> Inria IMEDIA2's participation at ImageCLEF 2012 plant identification task<em></em><a href="https://hal.inria.fr/file/index/docid/733912/filename/bmvc_final.pdf">pdf</a>. -->
 	</div>
