--- a/about/index.html
+++ b/about/index.html
@@ -9,6 +9,7 @@ title: About Saloua Litayem
 			<ul class="list-unstyled">
 				<li><a href="https://www.linkedin.com/in/saloualitayem/">Linkedin</a></li>
 				<li><a href="https://www.github.com/slitayem">Github</a><li>
+				<li><a href="https://stackoverflow.com/users/1287983/saloua">Stackoverflow</a><li></li>
 				<li><a href="https://twitter.com/saloua">Twitter</a></li>
 				<li><a href="https://scholar.google.com/citations?hl=en&user=mjKcassAAAAJ">Google Scholar</a></li>
 			</ul>
