--- a/404.html
+++ b/404.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: 404 Error | Sorry, this page does not exist.
+permalink: /404.html
 --- 
 <head>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -11,5 +12,8 @@ title: 404 Error | Sorry, this page does not exist.
 	  <div class="err">4</div>
 	  <i class="far fa-question-circle fa-spin"></i>
 	  <div class="err2">4</div>
-	  <div class="msg">Maybe this page moved? Got deleted? Is hiding out in quarantine? Never existed in the first place?<p>Let's go <a href="index.html" title="Home">home</a> and try from there.</p></div>
+		<div class="msg">
+		Hmm, this page seems to be missing or never quite made it here.  
+		<p>Feel free to head back<a href="{{ '/' | relative_url }}" title="Home"> home</a> and explore from there.</p>
 		</div>
+	</div>
