--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@ description: Saloua Litayem is a Senior Machine Learning Engineer / Data Scienti
 		<p>
 			As a <strong>servant leader</strong>, I cultivate a collaborative, high-performing culture 
 			rooted in <em>continuous learning</em>, <em>well-being</em>, and <em>shared success</em>. 
-			I'm passionate about architecting and delivering <strong>scalable</strong>, 
-			<strong>reliable</strong>, and <strong>efficient end-to-end AI products</strong> aligned 
-			with real business needs — leveraging best practices in <em>system design</em>, 
+			I'm passionate about architecting and delivering <strong>efficient</strong>
+			, and <strong>reliable end-to-end AI products</strong> aligned
+			 with real business needs — leveraging best practices in <em>system design</em>, 
 			<em>data strategy</em>, and <em>data-driven decision-making</em>.
 		</p>
 	</section>
